src/test/resources/errors/WelldefinednessError1.mch
MACHINE WelldefinednessError
PROPERTIES
%x.(x = 1 | 1)(2) = 2
END